--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: ^3.0.0
 
 dependencies:
-  http: ^0.13.6
+  http: ^1.1.0
   json_annotation: ^4.8.1
   equatable: ^2.0.5
 
@@ -16,3 +16,4 @@ dev_dependencies:
   test: ^1.21.0
   build_runner: ^2.3.3
   json_serializable: ^6.6.2
+  dotenv: ^4.1.0
